JavaParser.output
Terminals unused in grammar

    NULL_LITERAL
    STRINGARGS
    BOOLEAN_LITERAL


Rules useless in parser due to conflicts

   52 statement_list: ε


State 34 conflicts: 1 shift/reduce
State 41 conflicts: 3 shift/reduce
State 69 conflicts: 3 shift/reduce
State 84 conflicts: 3 shift/reduce
State 92 conflicts: 3 shift/reduce
State 93 conflicts: 18 shift/reduce, 1 reduce/reduce
State 94 conflicts: 18 shift/reduce, 1 reduce/reduce
State 110 conflicts: 18 shift/reduce, 1 reduce/reduce
State 130 conflicts: 3 shift/reduce
State 149 conflicts: 18 shift/reduce, 1 reduce/reduce
State 173 conflicts: 18 shift/reduce, 1 reduce/reduce
State 179 conflicts: 18 shift/reduce, 1 reduce/reduce
State 204 conflicts: 18 shift/reduce, 1 reduce/reduce
State 205 conflicts: 18 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Start $end

    1 Start: package_stmt import_stmt class_decl

    2 package_stmt: PACKAGE package_name SEMICOLON
    3             | ε

    4 package_name: ID package_list

    5 package_list: DOT ID package_list
    6             | ε

    7 import_stmt: IMPORT packages SEMICOLON import_stmt
    8            | ε

    9 packages: ID import_list

   10 import_list: DOT ID import_list
   11            | POINT
   12            | ε

   13 class_decl: access_specifier modifier CLASS ID LBRACE m_class_members RBRACE class_more

   14 access_specifier: PUBLIC
   15                 | PRIVATE
   16                 | PROTECTED

   17 modifier: STATIC
   18         | FINAL
   19         | ABSTRACT

   20 m_class_members: declaration main_func constructor functions

   21 class_more: access_specifier modifier CLASS ID LBRACE class_members RBRACE class_more
   22           | ε

   23 class_members: declaration constructor functions

   24 declaration: access_specifier modifier data_type decl_list SEMICOLON declaration
   25            | ε

   26 functions: access_specifier modifier data_type ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE functions
   27          | ε

   28 parameter_list: data_type ID id_list
   29               | ε

   30 id_list: COMMA data_type ID id_list
   31        | ε

   32 constructor: access_specifier ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE constructor
   33            | ε

   34 main_func: PUBLIC STATIC VOID MAIN LPAREN RPAREN LBRACE statement_list RBRACE

   35 data_type: BYTE
   36          | SHORT
   37          | INT
   38          | LONG
   39          | FLOAT
   40          | DOUBLE
   41          | CHAR
   42          | BOOLEAN
   43          | STRING
   44          | VOID
   45          | ID

   46 object_creation: data_type ID ASSIGN NEW data_type LPAREN parameters RPAREN SEMICOLON

   47 parameters: ID param_list
   48           | ε

   49 param_list: COMMA ID param_list
   50           | ε

   51 statement_list: statement statement_list
   52               | ε

   53 statement: declaration
   54          | assign_stat SEMICOLON
   55          | looping
   56          | decision
   57          | object_creation
   58          | function_call
   59          | PRINT LPAREN STRING_LITERAL RPAREN SEMICOLON

   60 function_call: ID LPAREN parameters RPAREN SEMICOLON

   61 decl_list: ID decl_list_prime

   62 decl_list_prime: COMMA ID decl_list
   63                | LBRACE NUMBER RBRACE decl_array
   64                | ε

   65 decl_array: COMMA decl_list
   66           | ε

   67 assign_stat: ID ASSIGN expn

   68 expn: simple_expn eprime

   69 eprime: relop simple_expn
   70       | ε

   71 simple_expn: term seprime

   72 seprime: PLUS term seprime
   73        | MINUS term seprime
   74        | ε

   75 term: factor tprime

   76 tprime: MULT factor tprime
   77       | DIV factor tprime
   78       | ε

   79 factor: ID
   80       | NUMBER

   81 decision: IF LPAREN expn RPAREN LBRACE statement_list RBRACE dprime

   82 dprime: ELSE LBRACE statement_list RBRACE
   83       | ε

   84 looping: WHILE LPAREN expn RPAREN LBRACE statement_list RBRACE
   85        | FOR LPAREN assign_stat SEMICOLON expn SEMICOLON assign_stat RPAREN LBRACE statement_list RBRACE

   86 relop: EQ
   87      | NEQ
   88      | LEQ
   89      | GEQ
   90      | LT
   91      | GT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PACKAGE (258) 2
    IMPORT (259) 7
    CLASS (260) 13 21
    PUBLIC (261) 14 34
    PRIVATE (262) 15
    PROTECTED (263) 16
    STATIC (264) 17 34
    FINAL (265) 18
    ABSTRACT (266) 19
    VOID (267) 34 44
    MAIN (268) 34
    BYTE (269) 35
    SHORT (270) 36
    INT (271) 37
    LONG (272) 38
    FLOAT (273) 39
    DOUBLE (274) 40
    CHAR (275) 41
    BOOLEAN (276) 42
    STRING (277) 43
    NEW (278) 46
    IF (279) 81
    ELSE (280) 82
    WHILE (281) 84
    FOR (282) 85
    PRINT (283) 59
    NULL_LITERAL (284)
    STRING_LITERAL (285) 59
    STRINGARGS (286)
    ID (287) 4 5 9 10 13 21 26 28 30 32 45 46 47 49 60 61 62 67 79
    NUMBER (288) 63 80
    BOOLEAN_LITERAL (289)
    EQ (290) 86
    NEQ (291) 87
    LEQ (292) 88
    GEQ (293) 89
    LT (294) 90
    GT (295) 91
    PLUS (296) 72
    MINUS (297) 73
    MULT (298) 76
    DIV (299) 77
    POINT (300) 11
    ASSIGN (301) 46 67
    DOT (302) 5 10
    LPAREN (303) 26 32 34 46 59 60 81 84 85
    RPAREN (304) 26 32 34 46 59 60 81 84 85
    LBRACE (305) 13 21 26 32 34 63 81 82 84 85
    RBRACE (306) 13 21 26 32 34 63 81 82 84 85
    SEMICOLON (307) 2 7 24 46 54 59 60 85
    COMMA (308) 30 49 62 65


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    Start (55)
        on left: 1
        on right: 0
    package_stmt (56)
        on left: 2 3
        on right: 1
    package_name (57)
        on left: 4
        on right: 2
    package_list (58)
        on left: 5 6
        on right: 4 5
    import_stmt (59)
        on left: 7 8
        on right: 1 7
    packages (60)
        on left: 9
        on right: 7
    import_list (61)
        on left: 10 11 12
        on right: 9 10
    class_decl (62)
        on left: 13
        on right: 1
    access_specifier (63)
        on left: 14 15 16
        on right: 13 21 24 26 32
    modifier (64)
        on left: 17 18 19
        on right: 13 21 24 26
    m_class_members (65)
        on left: 20
        on right: 13
    class_more (66)
        on left: 21 22
        on right: 13 21
    class_members (67)
        on left: 23
        on right: 21
    declaration (68)
        on left: 24 25
        on right: 20 23 24 53
    functions (69)
        on left: 26 27
        on right: 20 23 26
    parameter_list (70)
        on left: 28 29
        on right: 26 32
    id_list (71)
        on left: 30 31
        on right: 28 30
    constructor (72)
        on left: 32 33
        on right: 20 23 32
    main_func (73)
        on left: 34
        on right: 20
    data_type (74)
        on left: 35 36 37 38 39 40 41 42 43 44 45
        on right: 24 26 28 30 46
    object_creation (75)
        on left: 46
        on right: 57
    parameters (76)
        on left: 47 48
        on right: 46 60
    param_list (77)
        on left: 49 50
        on right: 47 49
    statement_list (78)
        on left: 51 52
        on right: 26 32 34 51 81 82 84 85
    statement (79)
        on left: 53 54 55 56 57 58 59
        on right: 51
    function_call (80)
        on left: 60
        on right: 58
    decl_list (81)
        on left: 61
        on right: 24 62 65
    decl_list_prime (82)
        on left: 62 63 64
        on right: 61
    decl_array (83)
        on left: 65 66
        on right: 63
    assign_stat (84)
        on left: 67
        on right: 54 85
    expn (85)
        on left: 68
        on right: 67 81 84 85
    eprime (86)
        on left: 69 70
        on right: 68
    simple_expn (87)
        on left: 71
        on right: 68 69
    seprime (88)
        on left: 72 73 74
        on right: 71 72 73
    term (89)
        on left: 75
        on right: 71 72 73
    tprime (90)
        on left: 76 77 78
        on right: 75 76 77
    factor (91)
        on left: 79 80
        on right: 75 76 77
    decision (92)
        on left: 81
        on right: 56
    dprime (93)
        on left: 82 83
        on right: 81
    looping (94)
        on left: 84 85
        on right: 55
    relop (95)
        on left: 86 87 88 89 90 91
        on right: 69


State 0

    0 $accept: • Start $end

    PACKAGE  shift, and go to state 1

    $default  reduce using rule 3 (package_stmt)

    Start         go to state 2
    package_stmt  go to state 3


State 1

    2 package_stmt: PACKAGE • package_name SEMICOLON

    ID  shift, and go to state 4

    package_name  go to state 5


State 2

    0 $accept: Start • $end

    $end  shift, and go to state 6


State 3

    1 Start: package_stmt • import_stmt class_decl

    IMPORT  shift, and go to state 7

    $default  reduce using rule 8 (import_stmt)

    import_stmt  go to state 8


State 4

    4 package_name: ID • package_list

    DOT  shift, and go to state 9

    $default  reduce using rule 6 (package_list)

    package_list  go to state 10


State 5

    2 package_stmt: PACKAGE package_name • SEMICOLON

    SEMICOLON  shift, and go to state 11


State 6

    0 $accept: Start $end •

    $default  accept


State 7

    7 import_stmt: IMPORT • packages SEMICOLON import_stmt

    ID  shift, and go to state 12

    packages  go to state 13


State 8

    1 Start: package_stmt import_stmt • class_decl

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    class_decl        go to state 17
    access_specifier  go to state 18


State 9

    5 package_list: DOT • ID package_list

    ID  shift, and go to state 19


State 10

    4 package_name: ID package_list •

    $default  reduce using rule 4 (package_name)


State 11

    2 package_stmt: PACKAGE package_name SEMICOLON •

    $default  reduce using rule 2 (package_stmt)


State 12

    9 packages: ID • import_list

    POINT  shift, and go to state 20
    DOT    shift, and go to state 21

    $default  reduce using rule 12 (import_list)

    import_list  go to state 22


State 13

    7 import_stmt: IMPORT packages • SEMICOLON import_stmt

    SEMICOLON  shift, and go to state 23


State 14

   14 access_specifier: PUBLIC •

    $default  reduce using rule 14 (access_specifier)


State 15

   15 access_specifier: PRIVATE •

    $default  reduce using rule 15 (access_specifier)


State 16

   16 access_specifier: PROTECTED •

    $default  reduce using rule 16 (access_specifier)


State 17

    1 Start: package_stmt import_stmt class_decl •

    $default  reduce using rule 1 (Start)


State 18

   13 class_decl: access_specifier • modifier CLASS ID LBRACE m_class_members RBRACE class_more

    STATIC    shift, and go to state 24
    FINAL     shift, and go to state 25
    ABSTRACT  shift, and go to state 26

    modifier  go to state 27


State 19

    5 package_list: DOT ID • package_list

    DOT  shift, and go to state 9

    $default  reduce using rule 6 (package_list)

    package_list  go to state 28


State 20

   11 import_list: POINT •

    $default  reduce using rule 11 (import_list)


State 21

   10 import_list: DOT • ID import_list

    ID  shift, and go to state 29


State 22

    9 packages: ID import_list •

    $default  reduce using rule 9 (packages)


State 23

    7 import_stmt: IMPORT packages SEMICOLON • import_stmt

    IMPORT  shift, and go to state 7

    $default  reduce using rule 8 (import_stmt)

    import_stmt  go to state 30


State 24

   17 modifier: STATIC •

    $default  reduce using rule 17 (modifier)


State 25

   18 modifier: FINAL •

    $default  reduce using rule 18 (modifier)


State 26

   19 modifier: ABSTRACT •

    $default  reduce using rule 19 (modifier)


State 27

   13 class_decl: access_specifier modifier • CLASS ID LBRACE m_class_members RBRACE class_more

    CLASS  shift, and go to state 31


State 28

    5 package_list: DOT ID package_list •

    $default  reduce using rule 5 (package_list)


State 29

   10 import_list: DOT ID • import_list

    POINT  shift, and go to state 20
    DOT    shift, and go to state 21

    $default  reduce using rule 12 (import_list)

    import_list  go to state 32


State 30

    7 import_stmt: IMPORT packages SEMICOLON import_stmt •

    $default  reduce using rule 7 (import_stmt)


State 31

   13 class_decl: access_specifier modifier CLASS • ID LBRACE m_class_members RBRACE class_more

    ID  shift, and go to state 33


State 32

   10 import_list: DOT ID import_list •

    $default  reduce using rule 10 (import_list)


State 33

   13 class_decl: access_specifier modifier CLASS ID • LBRACE m_class_members RBRACE class_more

    LBRACE  shift, and go to state 34


State 34

   13 class_decl: access_specifier modifier CLASS ID LBRACE • m_class_members RBRACE class_more

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    PUBLIC  [reduce using rule 25 (declaration)]

    access_specifier  go to state 35
    m_class_members   go to state 36
    declaration       go to state 37


State 35

   24 declaration: access_specifier • modifier data_type decl_list SEMICOLON declaration

    STATIC    shift, and go to state 24
    FINAL     shift, and go to state 25
    ABSTRACT  shift, and go to state 26

    modifier  go to state 38


State 36

   13 class_decl: access_specifier modifier CLASS ID LBRACE m_class_members • RBRACE class_more

    RBRACE  shift, and go to state 39


State 37

   20 m_class_members: declaration • main_func constructor functions

    PUBLIC  shift, and go to state 40

    main_func  go to state 41


State 38

   24 declaration: access_specifier modifier • data_type decl_list SEMICOLON declaration

    VOID     shift, and go to state 42
    BYTE     shift, and go to state 43
    SHORT    shift, and go to state 44
    INT      shift, and go to state 45
    LONG     shift, and go to state 46
    FLOAT    shift, and go to state 47
    DOUBLE   shift, and go to state 48
    CHAR     shift, and go to state 49
    BOOLEAN  shift, and go to state 50
    STRING   shift, and go to state 51
    ID       shift, and go to state 52

    data_type  go to state 53


State 39

   13 class_decl: access_specifier modifier CLASS ID LBRACE m_class_members RBRACE • class_more

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    $default  reduce using rule 22 (class_more)

    access_specifier  go to state 54
    class_more        go to state 55


State 40

   34 main_func: PUBLIC • STATIC VOID MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    STATIC  shift, and go to state 56


State 41

   20 m_class_members: declaration main_func • constructor functions

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    PUBLIC     [reduce using rule 33 (constructor)]
    PRIVATE    [reduce using rule 33 (constructor)]
    PROTECTED  [reduce using rule 33 (constructor)]
    $default   reduce using rule 33 (constructor)

    access_specifier  go to state 57
    constructor       go to state 58


State 42

   44 data_type: VOID •

    $default  reduce using rule 44 (data_type)


State 43

   35 data_type: BYTE •

    $default  reduce using rule 35 (data_type)


State 44

   36 data_type: SHORT •

    $default  reduce using rule 36 (data_type)


State 45

   37 data_type: INT •

    $default  reduce using rule 37 (data_type)


State 46

   38 data_type: LONG •

    $default  reduce using rule 38 (data_type)


State 47

   39 data_type: FLOAT •

    $default  reduce using rule 39 (data_type)


State 48

   40 data_type: DOUBLE •

    $default  reduce using rule 40 (data_type)


State 49

   41 data_type: CHAR •

    $default  reduce using rule 41 (data_type)


State 50

   42 data_type: BOOLEAN •

    $default  reduce using rule 42 (data_type)


State 51

   43 data_type: STRING •

    $default  reduce using rule 43 (data_type)


State 52

   45 data_type: ID •

    $default  reduce using rule 45 (data_type)


State 53

   24 declaration: access_specifier modifier data_type • decl_list SEMICOLON declaration

    ID  shift, and go to state 59

    decl_list  go to state 60


State 54

   21 class_more: access_specifier • modifier CLASS ID LBRACE class_members RBRACE class_more

    STATIC    shift, and go to state 24
    FINAL     shift, and go to state 25
    ABSTRACT  shift, and go to state 26

    modifier  go to state 61


State 55

   13 class_decl: access_specifier modifier CLASS ID LBRACE m_class_members RBRACE class_more •

    $default  reduce using rule 13 (class_decl)


State 56

   34 main_func: PUBLIC STATIC • VOID MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    VOID  shift, and go to state 62


State 57

   32 constructor: access_specifier • ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE constructor

    ID  shift, and go to state 63


State 58

   20 m_class_members: declaration main_func constructor • functions

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    $default  reduce using rule 27 (functions)

    access_specifier  go to state 64
    functions         go to state 65


State 59

   61 decl_list: ID • decl_list_prime

    LBRACE  shift, and go to state 66
    COMMA   shift, and go to state 67

    $default  reduce using rule 64 (decl_list_prime)

    decl_list_prime  go to state 68


State 60

   24 declaration: access_specifier modifier data_type decl_list • SEMICOLON declaration

    SEMICOLON  shift, and go to state 69


State 61

   21 class_more: access_specifier modifier • CLASS ID LBRACE class_members RBRACE class_more

    CLASS  shift, and go to state 70


State 62

   34 main_func: PUBLIC STATIC VOID • MAIN LPAREN RPAREN LBRACE statement_list RBRACE

    MAIN  shift, and go to state 71


State 63

   32 constructor: access_specifier ID • LPAREN parameter_list RPAREN LBRACE statement_list RBRACE constructor

    LPAREN  shift, and go to state 72


State 64

   26 functions: access_specifier • modifier data_type ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE functions

    STATIC    shift, and go to state 24
    FINAL     shift, and go to state 25
    ABSTRACT  shift, and go to state 26

    modifier  go to state 73


State 65

   20 m_class_members: declaration main_func constructor functions •

    $default  reduce using rule 20 (m_class_members)


State 66

   63 decl_list_prime: LBRACE • NUMBER RBRACE decl_array

    NUMBER  shift, and go to state 74


State 67

   62 decl_list_prime: COMMA • ID decl_list

    ID  shift, and go to state 75


State 68

   61 decl_list: ID decl_list_prime •

    $default  reduce using rule 61 (decl_list)


State 69

   24 declaration: access_specifier modifier data_type decl_list SEMICOLON • declaration

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    PUBLIC     [reduce using rule 25 (declaration)]
    PRIVATE    [reduce using rule 25 (declaration)]
    PROTECTED  [reduce using rule 25 (declaration)]
    $default   reduce using rule 25 (declaration)

    access_specifier  go to state 35
    declaration       go to state 76


State 70

   21 class_more: access_specifier modifier CLASS • ID LBRACE class_members RBRACE class_more

    ID  shift, and go to state 77


State 71

   34 main_func: PUBLIC STATIC VOID MAIN • LPAREN RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 78


State 72

   32 constructor: access_specifier ID LPAREN • parameter_list RPAREN LBRACE statement_list RBRACE constructor

    VOID     shift, and go to state 42
    BYTE     shift, and go to state 43
    SHORT    shift, and go to state 44
    INT      shift, and go to state 45
    LONG     shift, and go to state 46
    FLOAT    shift, and go to state 47
    DOUBLE   shift, and go to state 48
    CHAR     shift, and go to state 49
    BOOLEAN  shift, and go to state 50
    STRING   shift, and go to state 51
    ID       shift, and go to state 52

    $default  reduce using rule 29 (parameter_list)

    parameter_list  go to state 79
    data_type       go to state 80


State 73

   26 functions: access_specifier modifier • data_type ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE functions

    VOID     shift, and go to state 42
    BYTE     shift, and go to state 43
    SHORT    shift, and go to state 44
    INT      shift, and go to state 45
    LONG     shift, and go to state 46
    FLOAT    shift, and go to state 47
    DOUBLE   shift, and go to state 48
    CHAR     shift, and go to state 49
    BOOLEAN  shift, and go to state 50
    STRING   shift, and go to state 51
    ID       shift, and go to state 52

    data_type  go to state 81


State 74

   63 decl_list_prime: LBRACE NUMBER • RBRACE decl_array

    RBRACE  shift, and go to state 82


State 75

   62 decl_list_prime: COMMA ID • decl_list

    ID  shift, and go to state 59

    decl_list  go to state 83


State 76

   24 declaration: access_specifier modifier data_type decl_list SEMICOLON declaration •

    $default  reduce using rule 24 (declaration)


State 77

   21 class_more: access_specifier modifier CLASS ID • LBRACE class_members RBRACE class_more

    LBRACE  shift, and go to state 84


State 78

   34 main_func: PUBLIC STATIC VOID MAIN LPAREN • RPAREN LBRACE statement_list RBRACE

    RPAREN  shift, and go to state 85


State 79

   32 constructor: access_specifier ID LPAREN parameter_list • RPAREN LBRACE statement_list RBRACE constructor

    RPAREN  shift, and go to state 86


State 80

   28 parameter_list: data_type • ID id_list

    ID  shift, and go to state 87


State 81

   26 functions: access_specifier modifier data_type • ID LPAREN parameter_list RPAREN LBRACE statement_list RBRACE functions

    ID  shift, and go to state 88


State 82

   63 decl_list_prime: LBRACE NUMBER RBRACE • decl_array

    COMMA  shift, and go to state 89

    $default  reduce using rule 66 (decl_array)

    decl_array  go to state 90


State 83

   62 decl_list_prime: COMMA ID decl_list •

    $default  reduce using rule 62 (decl_list_prime)


State 84

   21 class_more: access_specifier modifier CLASS ID LBRACE • class_members RBRACE class_more

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    PUBLIC     [reduce using rule 25 (declaration)]
    PRIVATE    [reduce using rule 25 (declaration)]
    PROTECTED  [reduce using rule 25 (declaration)]
    $default   reduce using rule 25 (declaration)

    access_specifier  go to state 35
    class_members     go to state 91
    declaration       go to state 92


State 85

   34 main_func: PUBLIC STATIC VOID MAIN LPAREN RPAREN • LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 93


State 86

   32 constructor: access_specifier ID LPAREN parameter_list RPAREN • LBRACE statement_list RBRACE constructor

    LBRACE  shift, and go to state 94


State 87

   28 parameter_list: data_type ID • id_list

    COMMA  shift, and go to state 95

    $default  reduce using rule 31 (id_list)

    id_list  go to state 96


State 88

   26 functions: access_specifier modifier data_type ID • LPAREN parameter_list RPAREN LBRACE statement_list RBRACE functions

    LPAREN  shift, and go to state 97


State 89

   65 decl_array: COMMA • decl_list

    ID  shift, and go to state 59

    decl_list  go to state 98


State 90

   63 decl_list_prime: LBRACE NUMBER RBRACE decl_array •

    $default  reduce using rule 63 (decl_list_prime)


State 91

   21 class_more: access_specifier modifier CLASS ID LBRACE class_members • RBRACE class_more

    RBRACE  shift, and go to state 99


State 92

   23 class_members: declaration • constructor functions

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    PUBLIC     [reduce using rule 33 (constructor)]
    PRIVATE    [reduce using rule 33 (constructor)]
    PROTECTED  [reduce using rule 33 (constructor)]
    $default   reduce using rule 33 (constructor)

    access_specifier  go to state 57
    constructor       go to state 100


State 93

   34 main_func: PUBLIC STATIC VOID MAIN LPAREN RPAREN LBRACE • statement_list RBRACE

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    VOID       shift, and go to state 42
    BYTE       shift, and go to state 43
    SHORT      shift, and go to state 44
    INT        shift, and go to state 45
    LONG       shift, and go to state 46
    FLOAT      shift, and go to state 47
    DOUBLE     shift, and go to state 48
    CHAR       shift, and go to state 49
    BOOLEAN    shift, and go to state 50
    STRING     shift, and go to state 51
    IF         shift, and go to state 101
    WHILE      shift, and go to state 102
    FOR        shift, and go to state 103
    PRINT      shift, and go to state 104
    ID         shift, and go to state 105

    PUBLIC     [reduce using rule 25 (declaration)]
    PRIVATE    [reduce using rule 25 (declaration)]
    PROTECTED  [reduce using rule 25 (declaration)]
    VOID       [reduce using rule 25 (declaration)]
    BYTE       [reduce using rule 25 (declaration)]
    SHORT      [reduce using rule 25 (declaration)]
    INT        [reduce using rule 25 (declaration)]
    LONG       [reduce using rule 25 (declaration)]
    FLOAT      [reduce using rule 25 (declaration)]
    DOUBLE     [reduce using rule 25 (declaration)]
    CHAR       [reduce using rule 25 (declaration)]
    BOOLEAN    [reduce using rule 25 (declaration)]
    STRING     [reduce using rule 25 (declaration)]
    IF         [reduce using rule 25 (declaration)]
    WHILE      [reduce using rule 25 (declaration)]
    FOR        [reduce using rule 25 (declaration)]
    PRINT      [reduce using rule 25 (declaration)]
    ID         [reduce using rule 25 (declaration)]
    RBRACE     reduce using rule 25 (declaration)
    RBRACE     [reduce using rule 52 (statement_list)]
    $default   reduce using rule 25 (declaration)

    access_specifier  go to state 35
    declaration       go to state 106
    data_type         go to state 107
    object_creation   go to state 108
    statement_list    go to state 109
    statement         go to state 110
    function_call     go to state 111
    assign_stat       go to state 112
    decision          go to state 113
    looping           go to state 114


State 94

   32 constructor: access_specifier ID LPAREN parameter_list RPAREN LBRACE • statement_list RBRACE constructor

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    VOID       shift, and go to state 42
    BYTE       shift, and go to state 43
    SHORT      shift, and go to state 44
    INT        shift, and go to state 45
    LONG       shift, and go to state 46
    FLOAT      shift, and go to state 47
    DOUBLE     shift, and go to state 48
    CHAR       shift, and go to state 49
    BOOLEAN    shift, and go to state 50
    STRING     shift, and go to state 51
    IF         shift, and go to state 101
    WHILE      shift, and go to state 102
    FOR        shift, and go to state 103
    PRINT      shift, and go to state 104
    ID         shift, and go to state 105

    PUBLIC     [reduce using rule 25 (declaration)]
    PRIVATE    [reduce using rule 25 (declaration)]
    PROTECTED  [reduce using rule 25 (declaration)]
    VOID       [reduce using rule 25 (declaration)]
    BYTE       [reduce using rule 25 (declaration)]
    SHORT      [reduce using rule 25 (declaration)]
    INT        [reduce using rule 25 (declaration)]
    LONG       [reduce using rule 25 (declaration)]
    FLOAT      [reduce using rule 25 (declaration)]
    DOUBLE     [reduce using rule 25 (declaration)]
    CHAR       [reduce using rule 25 (declaration)]
    BOOLEAN    [reduce using rule 25 (declaration)]
    STRING     [reduce using rule 25 (declaration)]
    IF         [reduce using rule 25 (declaration)]
    WHILE      [reduce using rule 25 (declaration)]
    FOR        [reduce using rule 25 (declaration)]
    PRINT      [reduce using rule 25 (declaration)]
    ID         [reduce using rule 25 (declaration)]
    RBRACE     reduce using rule 25 (declaration)
    RBRACE     [reduce using rule 52 (statement_list)]
    $default   reduce using rule 25 (declaration)

    access_specifier  go to state 35
    declaration       go to state 106
    data_type         go to state 107
    object_creation   go to state 108
    statement_list    go to state 115
    statement         go to state 110
    function_call     go to state 111
    assign_stat       go to state 112
    decision          go to state 113
    looping           go to state 114


State 95

   30 id_list: COMMA • data_type ID id_list

    VOID     shift, and go to state 42
    BYTE     shift, and go to state 43
    SHORT    shift, and go to state 44
    INT      shift, and go to state 45
    LONG     shift, and go to state 46
    FLOAT    shift, and go to state 47
    DOUBLE   shift, and go to state 48
    CHAR     shift, and go to state 49
    BOOLEAN  shift, and go to state 50
    STRING   shift, and go to state 51
    ID       shift, and go to state 52

    data_type  go to state 116


State 96

   28 parameter_list: data_type ID id_list •

    $default  reduce using rule 28 (parameter_list)


State 97

   26 functions: access_specifier modifier data_type ID LPAREN • parameter_list RPAREN LBRACE statement_list RBRACE functions

    VOID     shift, and go to state 42
    BYTE     shift, and go to state 43
    SHORT    shift, and go to state 44
    INT      shift, and go to state 45
    LONG     shift, and go to state 46
    FLOAT    shift, and go to state 47
    DOUBLE   shift, and go to state 48
    CHAR     shift, and go to state 49
    BOOLEAN  shift, and go to state 50
    STRING   shift, and go to state 51
    ID       shift, and go to state 52

    $default  reduce using rule 29 (parameter_list)

    parameter_list  go to state 117
    data_type       go to state 80


State 98

   65 decl_array: COMMA decl_list •

    $default  reduce using rule 65 (decl_array)


State 99

   21 class_more: access_specifier modifier CLASS ID LBRACE class_members RBRACE • class_more

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    $default  reduce using rule 22 (class_more)

    access_specifier  go to state 54
    class_more        go to state 118


State 100

   23 class_members: declaration constructor • functions

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16

    $default  reduce using rule 27 (functions)

    access_specifier  go to state 64
    functions         go to state 119


State 101

   81 decision: IF • LPAREN expn RPAREN LBRACE statement_list RBRACE dprime

    LPAREN  shift, and go to state 120


State 102

   84 looping: WHILE • LPAREN expn RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 121


State 103

   85 looping: FOR • LPAREN assign_stat SEMICOLON expn SEMICOLON assign_stat RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 122


State 104

   59 statement: PRINT • LPAREN STRING_LITERAL RPAREN SEMICOLON

    LPAREN  shift, and go to state 123


State 105

   45 data_type: ID •
   60 function_call: ID • LPAREN parameters RPAREN SEMICOLON
   67 assign_stat: ID • ASSIGN expn

    ASSIGN  shift, and go to state 124
    LPAREN  shift, and go to state 125

    $default  reduce using rule 45 (data_type)


State 106

   53 statement: declaration •

    $default  reduce using rule 53 (statement)


State 107

   46 object_creation: data_type • ID ASSIGN NEW data_type LPAREN parameters RPAREN SEMICOLON

    ID  shift, and go to state 126


State 108

   57 statement: object_creation •

    $default  reduce using rule 57 (statement)


State 109

   34 main_func: PUBLIC STATIC VOID MAIN LPAREN RPAREN LBRACE statement_list • RBRACE

    RBRACE  shift, and go to state 127


State 110

   51 statement_list: statement • statement_list

    PUBLIC     shift, and go to state 14
    PRIVATE    shift, and go to state 15
    PROTECTED  shift, and go to state 16
    VOID       shift, and go to state 42
    BYTE       shift, and go to state 43
    SHORT      shift, and go to state 44
    INT        shift, and go to state 45
    LONG       shift, and go to state 46
    FLOAT      shift, and go to state 47
    DOUBLE     shift, and go to state 48
    CHAR       shift, and go to state 49
    BOOLEAN    shift, and go to state 50
    STRING     shift, and go to state 51
    IF         shift, and go to state 101
    WHILE      shift, and go to state 102
    FOR        shift, and go to state 103
    PRINT      shift, and go to state 104
    ID         shift, and go to state 105

    PUBLIC     [reduce using rule 25 (declaration)]
    PRIVATE    [reduce using rule 25 (declaration)]
    PROTECTED  [reduce using rule 25 (declaration)]
    VOID       [reduce using rule 25 (declaration)]
    BYTE       [reduce using rule 25 (declaration)]
    SHORT      [reduce using rule 25 (declaration)]
    INT        [reduce using rule 25 (declaration)]
    LONG       [reduce using rule 25 (declaration)]
    FLOAT      [reduce using rule 25 (declaration)]
    DOUBLE     [reduce using rule 25 (declaration)]
    CHAR       [reduce using rule 25 (declaration)]
    BOOLEAN    [reduce using rule 25 (declaration)]
    STRING     [reduce using rule 25 (declaration)]
    IF         [reduce using rule 25 (declaration)]
    WHILE      [reduce using rule 25 (declaration)]
    FOR        [reduce using rule 25 (declaration)]
    PRINT      [reduce using rule 25 (declaration)]
    ID         [reduce using rule 25 (declaration)]
    RBRACE     reduce using rule 25 (declaration)
    RBRACE     [reduce using rule 52 (statement_list)]
    $default   reduce using rule 25 (declaration)

    access_specifier  go to state 35
    declaration       go to state 106
    data_type         go to state 107
    object_creation   go to state 108
    statement_list    go to state 128
    statement         go to state 110
    function_call     go to state 111
    assign_stat       go to state 112
    decision          go to state 113
    looping           go to state 114


State 111

   58 statement: function_call •

    $default  reduce using rule 58 (statement)


State 112

   54 statement: assign_stat • SEMICOLON

    SEMICOLON  shift, and go to state 129


State 113
